--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
+				<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -60,7 +60,7 @@
 					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
 						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
-						<a href="others.html" class="btn btn-primary px-4 py-3"> 其他服务</a>
+						<a href="others.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
 					</p>
 				</div>
 			</div>
@@ -76,7 +76,7 @@
 					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
 						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
-						<a href="others.html" class="btn btn-primary px-4 py-3"> 其他服务</a>
+						<a href="others.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
 					</p>
 				</div>
 			</div>
@@ -92,7 +92,7 @@
 					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
 						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
-						<a href="others.html" class="btn btn-primary px-4 py-3"> 其他服务</a>
+						<a href="others.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
 					</p>
 				</div>
 			</div>
@@ -101,7 +101,17 @@
 
 </section>
 
-
+<div class="row">
+	<div class="col-md-12 text-center heading-section ftco-animate">
+		<br>
+		<h2 class="mb-4"><span>BOI</span>服务目标</h2>
+	</div>
+	<div class="col-md-12 text-center heading-section ftco-animate" style="background-image: url(images/bg_10.jpg);">
+		<br>
+		<h1 class="mb-4" style="color: #fdfafa">针对中资企业海外业务提供以下服务：</h1>
+		<h1 class="mb-4" style="color: #fdfafa">战略、投资、经贸企业对接、渠道拓展、高级人才猎聘等</h1>
+	</div>
+</div>
 
 
 
@@ -111,7 +121,7 @@
 			<div class="col-md-8 text-center heading-section ftco-animate">
 				<br>
 				<h2 class="mb-4"><span>请查看公司</span>成功案例</h2>
-				<p>Empowering Minds, Building Future</p>
+				<h3 class="mb-4" style="color: #fdfafa">Empowering Minds, Building Future</h3>
 			</div>
 		</div>
 
@@ -120,12 +130,14 @@
 				<div class="staff">
 					<div class="img-wrap d-flex align-items-stretch">
 
-						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service1.jpg);">
-						</div>
-						<div class="col-md-8  col-lg-10 ftco-animate" style = "background-color: #f8f9fc">
+						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service1.jpg);"></div>
+						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
 							<div class="px-4">
-								<p>金融服务介绍</p>
-								<p>点击查看成功案例  xxxxxxxxxxxxxxxxxxx  xxxxxxxxxxxxxxxxxxx   xxxxxxxxxxxxxxxxxxx      </p>
+								<br>
+								<H2>金融投资服务案例</H2>
+								<p><a>【案例一】华意压缩机集团是国内上市公司。曾经排名全球压缩机行业第四，收购排名第三的西班牙Cubig压缩机公司。将西班牙Cubig公司的债务剥离， 收购了其生产主体，包括生产和管理团队与不动产设备。 最终一跃站上了全球压缩机行业的第二把交椅。</a></p>
+								<p><a>【案例二】爱尔收购欧洲专业眼科机构股票定增。
+									独家承销被爱尔眼科收购的Clinic Barviera，在西班牙资本市场股票定增发行业务为股票估值定价，召开国际投资机构路演，各类机构，家族办公室等 投资者说明，与各家投资机构磋商对价和收购份额；国际股权交易，香港证交所共同配合，成功完成交易。</a></p>
 							</div>
 						</div>
 					</div>
@@ -138,10 +150,11 @@
 
 						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service2.jpg);">
 						</div>
-						<div class="col-md-8  col-lg-10 ftco-animate" style = "background-color: #f8f9fc">
+						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
 							<div class="px-4">
-								<p>金融服务介绍</p>
-								<p>点击查看成功案例  xxxxxxxxxxxxxxxxxxx  xxxxxxxxxxxxxxxxxxx   xxxxxxxxxxxxxxxxxxx      </p>
+								<br>
+								<H2>IT解决方案案例介绍</H2>
+								<p>西班牙本土华人企业G公司，其新上线电商业务采用了最新云技术为其提供IT基础设施，BOI根据该公司电商业务未来五年的发展，为其设计软件架构，并协助其营销活动。</p>
 							</div>
 						</div>
 					</div>
@@ -154,10 +167,11 @@
 
 						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service3.jpg);">
 						</div>
-						<div class="col-md-8  col-lg-10 ftco-animate" style = "background-color: #f8f9fc">
+						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
 							<div class="px-4">
-								<p>金融服务介绍</p>
-								<p>点击查看成功案例  xxxxxxxxxxxxxxxxxxx  xxxxxxxxxxxxxxxxxxx   xxxxxxxxxxxxxxxxxxx      </p>
+								<br>
+								<H2>产品代理案例介绍</H2>
+								<p>BOI已于VIVO、XIAOMI、等智能手机公司签署协议，成为其B2B渠道商，代理其在西班牙境内的B2B销售业务。</p>
 							</div>
 						</div>
 					</div>
@@ -170,10 +184,11 @@
 
 						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service4.jpg);">
 						</div>
-						<div class="col-md-8  col-lg-10 ftco-animate" style = "background-color: #f8f9fc">
+						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
 							<div class="px-4">
-								<p>金融服务介绍</p>
-								<p>点击查看成功案例  xxxxxxxxxxxxxxxxxxx  xxxxxxxxxxxxxxxxxxx   xxxxxxxxxxxxxxxxxxx      </p>
+								<br>
+								<H2>中资落地案例介绍</H2>
+								<p>BOI已与多家中企签署协议，代理企业西班牙相关法务、税务、人才猎聘等业务，助力中资出海。</p>
 							</div>
 						</div>
 					</div>
@@ -405,7 +420,7 @@
 						<div class="text">
 							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 10 July, 2023</a></div>
+								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 <!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
 <!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
 							</div>
@@ -434,7 +449,7 @@
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
+						<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
