--- a/ittech.html
+++ b/ittech.html
@@ -31,7 +31,7 @@
 				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item active"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
+				<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -128,7 +128,7 @@
 						<div class="text">
 							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 10 July, 2023</a></div>
+								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
 								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
 							</div>
@@ -157,7 +157,7 @@
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
+						<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
