--- a/products/mobile/mobile.html
+++ b/products/mobile/mobile.html
@@ -34,7 +34,7 @@
 				<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item active"><a href="../../products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item"><a href="../../others.html" class="nav-link">其他服务</a></li>
+				<li class="nav-item"><a href="../../others.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
@@ -87,7 +87,27 @@
 			</div>
 
 
-			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="https://www.vivo.com/es/products/x80pro" class="block-20 d-flex align-items-end" style="background-image: url('vivo/x80pro.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">New</span>
+							<span class="day">929€</span>
+							<span class="yr">5台起售</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="https://www.vivo.com/es/products/x80pro">VIVO X80 Pro</a></h3>
+						<p href="products/mobile/mobile.html">VIVO X系列2023新款高档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="https://www.vivo.com/es/products/x80pro" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a href="https://www.vivo.com/es/products/v29-lite-5g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v29lite_1.jpg');">
 						<div class="meta-date text-center p-2">
@@ -101,6 +121,94 @@
 						<p >VIVO 2023年新款中档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="https://www.vivo.com/es/products/v29-lite-5g" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.vivo.com/es/products/v235g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v23.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="day">409€</span>
+							<span class="yr">5台起售</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="https://www.vivo.com/es/products/v235g" class="heading"><a href="#">VIVO V23</a></h3>
+						<p >VIVO 2023年新款中档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="https://www.vivo.com/es/products/v235g" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.vivo.com/es/products/v21" class="block-20 d-flex align-items-end" style="background-image: url('vivo/v21.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="day">299€</span>
+							<span class="yr">5台起售</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="https://www.vivo.com/es/products/v21" class="heading"><a href="#">VIVO V21</a></h3>
+						<p >VIVO 2023年新款中低档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="https://www.vivo.com/es/products/v21" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div  class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.vivo.com/es/products/y765g" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y76.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="day">259€</span>
+							<span class="yr">5台起售</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="https://www.vivo.com/es/products/y765g" class="heading"><a href="#">VIVO Y76</a></h3>
+						<p >VIVO 2023年新款中低档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="https://www.vivo.com/es/products/y765g" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="https://www.vivo.com/es/products/y72" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y72.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="day">199€</span>
+							<span class="yr">5台起售</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="https://www.vivo.com/es/products/y72" class="heading"><a href="#">VIVO Y72</a></h3>
+						<p >VIVO 2023年新款低档机型，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="https://www.vivo.com/es/products/y72" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
 							</p>
 						</div>
@@ -123,6 +231,25 @@
 						<p>VIVO Y系列2023新款低档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p  class="mb-0"><a href="https://www.vivo.com/es/products/y35" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="https://www.vivo.com/es/products/y01" class="block-20 d-flex align-items-end" style="background-image: url('vivo/y01.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">New</span>
+							<span class="day">119€</span>
+							<span class="yr">5台起售</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 href="https://www.vivo.com/es/products/y01" class="heading"><a href="#">VIVO Y01</a></h3>
+						<p>VIVO Y系列2023新款低档旗舰机，团购价低于市场售价10%，5台起售，产品参数请VIVO查看官网。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p  class="mb-0"><a href="https://www.vivo.com/es/products/y01" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
 					</div>
 				</div>
@@ -221,7 +348,7 @@
 						<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="../../products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="../../others.html" class="nav-link">其他服务</a></li>
+						<li class="nav-item"><a href="../../others.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
