--- a/gooverseas.html
+++ b/gooverseas.html
@@ -31,7 +31,7 @@
 				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item active"><a href="others.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item active"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -49,14 +49,14 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">其他企业服务</h1>
+				<h1 class="mb-2 bread">中资落地服务</h1>
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
 				<p>
-					<a href="other/hr/hr.html" class="btn btn-success px-4 py-3">人才猎聘</a>
-					<a href="other/gooverseas/go.html" class="btn btn-info px-4 py-3"> 出海孵化</a>
-					<a href="other/marketing/marketing.html" class="btn btn-info px-4 py-3"> 市场营销</a>
-					<a href="other/other/other.html" class="btn btn-info px-4 py-3"> 中资落地服务</a>
+					<a href="gooverseas/hr/hr.html" class="btn btn-success px-4 py-3">出海孵化</a>
+					<a href="gooverseas/gooverseas/go.html" class="btn btn-success px-4 py-3"> 人才猎聘</a>
+					<a href="gooverseas/marketing/marketing.html" class="btn btn-success px-4 py-3"> 市场营销</a>
+					<a href="gooverseas/admin/admin.html" class="btn btn-success px-4 py-3"> 行政服务</a>
 			</div>
 		</div>
 	</div>
@@ -130,7 +130,7 @@
 					<div class="block-21 mb-4 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -141,7 +141,7 @@
 					<div class="block-21 mb-5 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
+							<h3 class="heading"><a href="news/20230711/news.html">睿泽国际CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -161,7 +161,7 @@
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
