--- a/investment.html
+++ b/investment.html
@@ -31,7 +31,7 @@
 				<li class="nav-item active"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -76,7 +76,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="investment/projects/investment_projects.html">金融投资项目</a></h3>
-						<p>BOI CEO Yanik作为在欧洲从业20余年资深金融投行专家，经手无数投行业务，点击查看成功案例以及现有项目。</p>
+						<p>睿泽国际CEO Yanik作为在欧洲从业20余年资深金融投行专家，经手无数投行业务，点击查看成功案例以及现有项目。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="investment/projects/investment_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
@@ -97,7 +97,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="investment/projects/asset_projects.html">资产管理</a></h3>
-						<p>BOI CEO Yanik作为在欧洲唯一具有资产管理执照华人，为您提供个人资产管理以及全球资产配置服务。</p>
+						<p>睿泽国际CEO Yanik作为在欧洲唯一具有资产管理执照华人，为您提供个人资产管理以及全球资产配置服务。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="investment/projects/asset_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -116,7 +116,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="investment/mapfre/mapfre_seguro.html">保险业务</a></h3>
-						<p>BOI 作为西班牙最大保险公司MAPFRE合作伙伴，为企业提供全方位保险产品，点击查看产品目录</p>
+						<p>睿泽国际作为西班牙最大保险公司MAPFRE合作伙伴，为企业提供全方位保险产品，点击查看产品目录</p>
 						<div class="d-flex align-items-center mt-4">
 							<p  class="mb-0"><a href="investment/mapfre/mapfre_seguro.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -193,7 +193,7 @@
 					<div class="block-21 mb-4 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -204,7 +204,7 @@
 					<div class="block-21 mb-5 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
+							<h3 class="heading"><a href="news/20230711/news.html">睿泽国际CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -224,7 +224,7 @@
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
