--- a/news.html
+++ b/news.html
@@ -31,7 +31,7 @@
 				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item active"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -74,8 +74,8 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Startup Program</a></h3>
-						<p>2023年7月11日， Huawei Cloud Startup Program 在西班牙马德里 Las Tablas 华为办公室举办，BOI CEO Yanik Yang应邀出席活动。</p>
+						<h3 class="heading"><a href="news/20230711/news.html">睿泽国际CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Startup Program</a></h3>
+						<p>2023年7月11日， Huawei Cloud Startup Program 在西班牙马德里 Las Tablas 华为办公室举办，睿泽国际CEO Yanik Yang应邀出席活动。</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="news/20230711/news.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -95,8 +95,8 @@
 						</div>
 					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀出席华为云西班牙 Huawei Cloud Summit Spain 2023</a></h3>
-						<p href="news/20230710/news.html">2023年7月5日，Huawei Cloud Summit Spain 2023 在西班牙马德里举办，BOI CEO Yanik Yang应邀出席活动</p>
+						<h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀出席华为云西班牙 Huawei Cloud Summit Spain 2023</a></h3>
+						<p href="news/20230710/news.html">2023年7月5日，Huawei Cloud Summit Spain 2023 在西班牙马德里举办，睿泽国际CEO Yanik Yang应邀出席活动</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="news/20230710/news.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
@@ -279,7 +279,7 @@
 					<div class="block-21 mb-4 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -290,7 +290,7 @@
 					<div class="block-21 mb-5 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
+							<h3 class="heading"><a href="news/20230711/news.html">睿泽国际CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -310,7 +310,7 @@
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
