--- a/products.html
+++ b/products.html
@@ -32,7 +32,7 @@
 				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item active"><a href="products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -64,8 +64,8 @@
 
 <section class="ftco-section bg-light">
 	<div class="container">
-		<div id = "rowBlogs" class="row" class = "wrapper">
-			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+		<div class="row" class = "wrapper">
+			<div class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
 					<a href="products/mobile/mobile.html" class="block-20 d-flex align-items-end" style="background-image: url('products/mobile/smartphone.jpg');">
 						<div class="meta-date text-center p-2">
@@ -75,7 +75,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="products/mobile/mobile.html">智能手机</a></h3>
-						<p href="products/mobile/mobile.html">BOI 作为VIVO, OPPO, XIAOMI 低于市场零售价格B2B销售，5台起售，点击查看产品目录</p>
+						<p href="products/mobile/mobile.html">睿泽国际作为VIVO, OPPO, XIAOMI 低于市场零售价格B2B销售，5台起售，点击查看产品目录</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="products/mobile/mobile.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
@@ -96,7 +96,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="products/network/network.html">网络设备</a></h3>
-						<p href="products/mobile/mobile.html">BOI 作为华为、锐捷一级代理商，代理路由器、交换机、服务器、光纤等网络设备，点击查看产品目录</p>
+						<p href="products/mobile/mobile.html">睿泽国际作为华为、锐捷一级代理商，代理路由器、交换机、服务器、光纤等网络设备，点击查看产品目录</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="products/network/network.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -115,7 +115,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="products/security/security.html">安防设备</a></h3>
-						<p>BOI 作为海康威视、大华一级代理商，代理安防摄像头、智能控制系统，点击查看产品目录</p>
+						<p>睿泽国际作为海康威视、大华一级代理商，代理安防摄像头、智能控制系统，点击查看产品目录</p>
 						<div class="d-flex align-items-center mt-4">
 							<p  class="mb-0"><a href="products/security/security.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -132,7 +132,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="products/solar/solar.html">光伏设备</a></h3>
-						<p>BOI 作为太阳能光伏板一级代理商，提供一站式解决方案，点击查看代理产品目录</p>
+						<p>睿泽国际作为太阳能光伏板一级代理商，提供一站式解决方案，点击查看代理产品目录</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="products/solar/solar.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -150,7 +150,7 @@
 					</a>
 					<div class="text bg-white p-4">
 						<h3 class="heading"><a href="products/battery/battery.html">储能设备</a></h3>
-						<p>BOI 作为电池、储能逆变器、储能系统产品一级代理商，用优质产品满足客户需求，点击查看代理产品目录</p>
+						<p>睿泽国际作为电池、储能逆变器、储能系统产品一级代理商，用优质产品满足客户需求，点击查看代理产品目录</p>
 						<div class="d-flex align-items-center mt-4">
 							<p class="mb-0"><a href="products/battery/battery.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
@@ -227,7 +227,7 @@
 					<div class="block-21 mb-4 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -238,7 +238,7 @@
 					<div class="block-21 mb-5 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
+							<h3 class="heading"><a href="news/20230711/news.html">睿泽国际CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -258,7 +258,7 @@
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
