--- a/gooverseas/marketing/marketing.html
+++ b/gooverseas/marketing/marketing.html
@@ -31,7 +31,7 @@
 				<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="../../products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item active"><a href="../../others.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item active"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
@@ -56,7 +56,7 @@
 					<a  href="../hr/hr.html" class="btn btn-success px-4 py-3">人才猎聘</a>
 					<a  href="../gooverseas/go.html" class="btn btn-info px-4 py-3"> 出海孵化</a>
 					<a  href="../marketing/marketing.html" class="btn btn-info px-4 py-3"> 市场营销</a>
-					<a  href="../other/other.html" class="btn btn-info px-4 py-3"> 中资落地服务</a>
+					<a href="../admin/admin.html" class="btn btn-info px-4 py-3"> 中资落地服务</a>
 			</div>
 		</div>
 	</div>
@@ -142,7 +142,7 @@
 						<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="../../products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="../../others.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
