--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -60,7 +60,7 @@
 					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
 						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
-						<a href="others.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
+						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
 					</p>
 				</div>
 			</div>
@@ -76,7 +76,7 @@
 					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
 						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
-						<a href="others.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
+						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
 					</p>
 				</div>
 			</div>
@@ -92,7 +92,7 @@
 					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
 						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
 						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
-						<a href="others.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
+						<a href="gooverseas.html" class="btn btn-primary px-4 py-3"> 中资落地服务</a>
 					</p>
 				</div>
 			</div>
@@ -104,7 +104,7 @@
 <div class="row">
 	<div class="col-md-12 text-center heading-section ftco-animate">
 		<br>
-		<h2 class="mb-4"><span>BOI</span>服务目标</h2>
+		<h2 class="mb-4"><span>睿泽国际</span>服务目标</h2>
 	</div>
 	<div class="col-md-12 text-center heading-section ftco-animate" style="background-image: url(images/bg_10.jpg);">
 		<br>
@@ -113,6 +113,73 @@
 	</div>
 </div>
 
+
+
+
+<section class="ftco-section bg-light">
+	<div class="container">
+		<div class="row" class = "wrapper">
+
+			<div class="col-md-5 col-lg-6 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="investment.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">1</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="investment.html">金融保险</a></h3>
+						<p>睿泽国际CEO Yanik Yang作为在欧洲从业二十余年投行专家，为您提供最优质的金融保险服务。</p>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-5 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a href="ittech.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">2</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="ittech.html">企业IT技术</a></h3>
+						<p>睿泽国际为您提供企业IT基础设施（网络、服务器、数据中心、云）、办公软件系统、安保系统等专业解决方案。</p>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-5 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a href="products.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">3</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="products.html">产品代理</a></h3>
+						<p>睿泽国际为企业在西班牙境内代理产品销售，并为企业提供B2B产品购买服务。</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-5 col-lg-6 ftco-animate">
+				<div class="blog-entry">
+					<a href="gooverseas.html" class="block-20 d-flex align-items-end" style="background-image: url('images/bg_10.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">4</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="gooverseas.html">中资落地服务</a></h3>
+						<p>睿泽国际为中资出海企业提供端到端全方位服务，包括企业欧洲实体公司代理、本地公司注册、人才猎聘、市场营销活动策划以及承办等相关业务。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 
 
 <section class="ftco-section">
@@ -127,34 +194,44 @@
 
 		<div class="row">
 			<div class="col-md-12 col-lg-12 ftco-animate ">
-				<div class="staff">
+				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
 						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service1.jpg);"></div>
-						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
-							<div class="px-4">
-								<br>
+						<div class="col-md-12  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-4">
+							<div class="px-4 dropdown-item-text">
+
 								<H2>金融投资服务案例</H2>
 								<p><a>【案例一】华意压缩机集团是国内上市公司。曾经排名全球压缩机行业第四，收购排名第三的西班牙Cubig压缩机公司。将西班牙Cubig公司的债务剥离， 收购了其生产主体，包括生产和管理团队与不动产设备。 最终一跃站上了全球压缩机行业的第二把交椅。</a></p>
 								<p><a>【案例二】爱尔收购欧洲专业眼科机构股票定增。
 									独家承销被爱尔眼科收购的Clinic Barviera，在西班牙资本市场股票定增发行业务为股票估值定价，召开国际投资机构路演，各类机构，家族办公室等 投资者说明，与各家投资机构磋商对价和收购份额；国际股权交易，香港证交所共同配合，成功完成交易。</a></p>
 							</div>
+							<div class="d-flex align-items-center mt-4">
+								<p  class="mb-0"><a href="investment/investment_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 
 			<div class="col-md-12 col-lg-12 ftco-animate ">
-				<div class="staff">
+				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
 						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service2.jpg);">
 						</div>
 						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-4">
 							<div class="px-4">
-								<br>
+
 								<H2>IT解决方案案例介绍</H2>
 								<p>西班牙本土华人企业G公司，其新上线电商业务采用了最新云技术为其提供IT基础设施，BOI根据该公司电商业务未来五年的发展，为其设计软件架构，并协助其营销活动。</p>
+							</div>
+							<div class="d-flex align-items-center mt-4">
+								<p  class="mb-0"><a href="ittech/ittech_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							</div>
 							</div>
 						</div>
 					</div>
@@ -162,16 +239,20 @@
 			</div>
 
 			<div class="col-md-12 col-lg-12 ftco-animate ">
-				<div class="staff">
+				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
 						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service3.jpg);">
 						</div>
 						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-4">
 							<div class="px-4">
-								<br>
 								<H2>产品代理案例介绍</H2>
 								<p>BOI已于VIVO、XIAOMI、等智能手机公司签署协议，成为其B2B渠道商，代理其在西班牙境内的B2B销售业务。</p>
+							</div>
+							<div class="d-flex align-items-center mt-4">
+								<p  class="mb-0"><a href="products/products_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							</div>
 							</div>
 						</div>
 					</div>
@@ -179,16 +260,20 @@
 			</div>
 
 			<div class="col-md-12 col-lg-12 ftco-animate ">
-				<div class="staff">
+				<div class="blog-entry">
 					<div class="img-wrap d-flex align-items-stretch">
 
 						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service4.jpg);">
 						</div>
 						<div class="col-md-8  col-lg-8 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="text bg-white p-4">
 							<div class="px-4">
-								<br>
 								<H2>中资落地案例介绍</H2>
 								<p>BOI已与多家中企签署协议，代理企业西班牙相关法务、税务、人才猎聘等业务，助力中资出海。</p>
+							</div>
+							<div class="d-flex align-items-center mt-4">
+								<p  class="mb-0"><a href="gooverseas/gooverseas_case.html" class="btn btn-secondary">点击查看案例详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							</div>
 							</div>
 						</div>
 					</div>
@@ -418,7 +503,7 @@
 					<div class="block-21 mb-4 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 <!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -429,7 +514,7 @@
 					<div class="block-21 mb-5 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
+							<h3 class="heading"><a href="news/20230711/news.html">睿泽国际CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -449,7 +534,7 @@
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
