--- a/ittech.html
+++ b/ittech.html
@@ -31,7 +31,7 @@
 				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item active"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -126,7 +126,7 @@
 					<div class="block-21 mb-4 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
+							<h3 class="heading"><a href="news/20230710/news.html">睿泽国际CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 05 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
@@ -137,7 +137,7 @@
 					<div class="block-21 mb-5 d-flex">
 						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
+							<h3 class="heading"><a href="news/20230711/news.html">睿泽国际CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
 							<div class="meta">
 								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
@@ -157,7 +157,7 @@
 						<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="others.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
