--- a/products/security/security.html
+++ b/products/security/security.html
@@ -34,7 +34,7 @@
 				<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item active"><a href="../../products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item"><a href="../../others.html" class="nav-link">中资落地服务</a></li>
+				<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
 				<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
@@ -274,7 +274,7 @@
 						<li class="nav-item"><a href="../../investment.html" class="nav-link">金融保险</a></li>
 						<li class="nav-item"><a href="../../ittech.html" class="nav-link">企业IT技术</a></li>
 						<li class="nav-item"><a href="../../products.html" class="nav-link">产品代理</a></li>
-						<li class="nav-item"><a href="../../others.html" class="nav-link">中资落地服务</a></li>
+						<li class="nav-item"><a href="../../gooverseas.html" class="nav-link">中资落地服务</a></li>
 						<li class="nav-item"><a href="../../news.html" class="nav-link">公司新闻</a></li>
 						<li class="nav-item"><a href="../../about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="../../contact.html" class="nav-link">联系我们</a></li>
